--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-webcam": "^7.2.0",
+    "react-router-dom": "^7.9.4",
+    "tailwindcss-animate": "^1.0.7",
     "webgazer": "^3.4.0"
   },
   "devDependencies": {
